# AI-API-Client

./: Cargo.toml  README.md  test_cases.db
.cargo/: config
certs/: mycert.pem  mykey.pem
src/: api_handler.rs  handlers.rs  lib.rs  main.rs  models.rs
static/: index.css  index.html  index.js
