[package]
name = "API_AI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web-lab = "0.22.0"
actix-files = "0.6"
rustls = { version = "0.23.13", features = ["ring"] }  # Gunakan versi yang lebih sesuai
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json", "trust-dns"] }
tokio = { version = "1.40.0", features = ["full"] }  # Tambahkan tokio dengan fitur 'full'
log = "0.4"
env_logger = "0.11"
strsim = "0.11.1"
rustls-pemfile = "2.1.3"
actix-cors = "0.7.0"
